deploy/kustomize/stage/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git-classrooms
spec:
  rules:
  - host: app.stage.git-classrooms.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: git-classrooms
            port:
              name: http
      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              name: http
